tenancy added